<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/bg2">

    <!--    1. Komponen itu sebagai button untuk melakukan intent.
            2. android:id="@+id/inviteBtn" untuk memberi nama atau id pada button ini.
           -->
    <Button
        android:id="@+id/inviteBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="90dp"
        android:text="@string/invite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/fani_anggita"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/graphic_designer"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck"
        />

    <ImageView
        android:id="@+id/redcard"
        android:layout_width="180dp"
        android:layout_height="191dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/redcard"
        app:layout_constraintEnd_toStartOf="@+id/yellowcard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inviteBtn"
        app:srcCompat="@drawable/redcard" />

    <ImageView
        android:id="@+id/yellowcard"
        android:layout_width="180dp"
        android:layout_height="191dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/yellowcard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/redcard"
        app:layout_constraintTop_toBottomOf="@+id/inviteBtn"
        app:srcCompat="@drawable/yellowcard"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/checklist"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/redcard"
        app:layout_constraintEnd_toEndOf="@+id/redcard"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/redcard"
        app:layout_constraintTop_toTopOf="@+id/redcard"
        app:srcCompat="@drawable/ic_baseline_done_outline_24" />

    <TextView
        android:id="@+id/projectcom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_450"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/redcard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/redcard"
        app:layout_constraintTop_toBottomOf="@+id/checklist" />

    <TextView
        android:id="@+id/projectruncount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_5"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/yellowcard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/yellowcard"
        app:layout_constraintTop_toBottomOf="@+id/runningicon"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/projectcom2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/project_completed"
        android:textAlignment="center"
        android:textColor="#FFFDE7"
        app:layout_constraintEnd_toEndOf="@+id/redcard"
        app:layout_constraintStart_toStartOf="@+id/redcard"
        app:layout_constraintTop_toBottomOf="@+id/projectcom"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/projectcom4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/project_running"
        android:textAlignment="center"
        android:textColor="#FFFDE7"
        app:layout_constraintEnd_toEndOf="@+id/yellowcard"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/yellowcard"
        app:layout_constraintTop_toBottomOf="@+id/projectruncount"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/runningicon"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/project_running"
        app:layout_constraintEnd_toEndOf="@+id/yellowcard"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/yellowcard"
        app:layout_constraintTop_toTopOf="@+id/yellowcard"
        app:srcCompat="@drawable/ic_baseline_construction_24"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/view_my_porfolio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/aboutme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/about_me"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redcard" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/about_me_dec"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutme" />


</androidx.constraintlayout.widget.ConstraintLayout>